Issue 102: Replacing invalid JVM Options (#111)
* Issue 102: Replacing invalid JVM Options

Signed-off-by: SrishT <Srishti.Thakkar@dell.com>

* Issue 102: Replacing invalid JVM Options

Signed-off-by: SrishT <Srishti.Thakkar@dell.com>

* Issue 102: Modifying documentation

Signed-off-by: SrishT <Srishti.Thakkar@dell.com>

* Issue 102: Modifying documentation

Signed-off-by: SrishT <Srishti.Thakkar@dell.com>

* Issue 102: Addressing review comments

Signed-off-by: SrishT <Srishti.Thakkar@dell.com>

* Issue 102: Addressing review comments

Signed-off-by: SrishT <Srishti.Thakkar@dell.com>

* Issue 102: Addressing review comments

Signed-off-by: SrishT <Srishti.Thakkar@dell.com>

* Issue 102: Changing bookkeeper version to 0.9.0

Signed-off-by: SrishT <Srishti.Thakkar@dell.com>

* Issue 102: Changing bookkeeper version to 0.9.0

Signed-off-by: SrishT <Srishti.Thakkar@dell.com>

Co-authored-by: SrishT <Srishti.Thakkar@dell.com>